--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agencex-astro",
+  "name": "sinetiquetas-astro",
   "type": "module",
   "version": "0.0.5",
   "scripts": {
@@ -10,8 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.0.0",
-    "astro": "^3.0.7",
-    "tailwindcss": "^3.3.3"
+    "@astrojs/tailwind": "^5.1.4",
+    "astro": "^5.1.2",
+    "tailwindcss": "^3.4.17"
   }
 }
